Orpie ChangeLog
------------------------------------------------------------------------

v1.3

   2004-07-16        Included "register" variable shortcut macros in
                     orpierc.
                     
                     Added a configuration option to conserve memory
                     by turning off string caching.

                     Added a background thread that precomputes
                     string representations of stack elements.

   2004-07-13        Implemented memoization of string representations
                     for stack elements.

   2004-07-08        Replaced general integer base conversion algorithm 
                     with fast (N*log(N) or better) divide-and-
                     -conquer algorithms.

   2004-07-04        Added binomial coefficient function.

   2004-07-03        Added LCM function.

   2004-06-27        Implemented a method for handling interruptible
                     computations.

                     Added exact factorial and GCD functions.


v1.2

   2004-06-16        Version 1.2.0 release.

   2004-06-15        Fixed the build script to support parallel make.
   
                     Replaced 'datafile', 'buffer', and 'input_buffer'
                     orpierc variables with the 'datadir' variable.
                     
                     Fixed crash due to displaying 'about' screen in
                     a very small terminal window.

   2004-06-14        Implemented user-defined variables and
                     autocompletion routines.

   2004-06-13        mod() now has a check for >1 stack elements.

   2004-04-22        Orpie no longer generates an error message if
                     it is run without a preexisting calculator
                     state file.


v1.1

   2004-04-17        Version 1.1.1 release.  Added Chris Petersen's
                     orpie.spec file for building RPMs.

   2004-04-16        Version 1.1 release.
