@@ -323,6 +323,15 @@ let operation_of_string command_str =
    |"function_gcd"                  -> (Function Gcd)
    |"function_lcm"                  -> (Function Lcm)
    |"function_binomial_coeff"       -> (Function Binom)
+   |"function_total"                -> (Function Total)
+   |"function_mean"                 -> (Function Mean)
+   |"function_sumsq"                -> (Function Sumsq)
+   |"function_var_unbiased"         -> (Function Var)
+   |"function_var_biased"           -> (Function VarBias)
+   |"function_stdev_unbiased"       -> (Function Stdev)
+   |"function_stdev_biased"         -> (Function StdevBias)
+   |"function_minimum"              -> (Function Min)
+   |"function_maximum"              -> (Function Max)
    |"edit_begin_integer"            -> (Edit BeginInteger)
    |"edit_complex"                  -> (Edit BeginComplex)
    |"edit_matrix"                   -> (Edit BeginMatrix)
