@@ -2,6 +2,9 @@ Orpie ChangeLog
 ------------------------------------------------------------------------
 
 v1.3
+   
+   2004-07-17        Implemented common single-variable statistics
+                     functions.
 
    2004-07-16        Included "register" variable shortcut macros in
                      orpierc.
